--- a/design-patterns-course.ipynb
+++ b/design-patterns-course.ipynb
@@ -17,11 +17,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Builder\n",
+    "* A builder is a separate component for building an object\n",
+    "* Can either give builder an initializer or return it via a static function\n",
+    "* To make builder fluent, return this\n",
+    "* Different facets of an object can be built with different builders working in tandem via a base class"
+   ]
   }
  ],
  "metadata": {
