add prototype note

--- a/design-patterns-course.ipynb
+++ b/design-patterns-course.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SOLID:\n",
+    "### SOLID:\n",
     "* Single Responsibility Principle:\n",
     "    * A class should only have one reason to change\n",
     "    * Separation of concerns - different classes handling different, independent tasks/problems\n",
@@ -25,6 +25,28 @@
     "* Can either give builder an initializer or return it via a static function\n",
     "* To make builder fluent, return this\n",
     "* Different facets of an object can be built with different builders working in tandem via a base class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Factory\n",
+    "* A factory method is a static method that creates objects\n",
+    "* A factory is any entity that can take care of object creation\n",
+    "* A factory can be external or reside inside the object as inner class\n",
+    "* Hierarchies of factories can be used to create related objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Prototype\n",
+    "* To implement a prototype, partially construct an object and store it somewhere\n",
+    "\n"
    ]
   }
  ],
