--- a/design-patterns-course.ipynb
+++ b/design-patterns-course.ipynb
@@ -39,14 +39,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Prototype\n",
     "* To implement a prototype, partially construct an object and store it somewhere\n",
-    "\n"
+    "* Deep copy the prototype\n",
+    "* Customize the resulting instance\n",
+    "* A factory provides a convenient API for using prototypes\n"
    ]
   }
  ],
